--- a/service.yaml
+++ b/service.yaml
@@ -1,13 +1,30 @@
+#apiVersion: v1
+#kind: Service
+#metadata:
+#  name: springboot-service
+#spec:
+#  selector:
+#    app: springboot-app
+#  ports:
+#   - protocol: TCP
+#      port: 80
+#      targetPort: 8080
+#      nodePort: 32001
+#  type: NodePort
+
 apiVersion: v1
 kind: Service
 metadata:
-  name: springboot-service
+  name: springboot-app
+  namespace: default
+  annotations:
+    service.beta.kubernetes.io/aws-load-balancer-type: "nlb" # Change to "elb" if needed
 spec:
   selector:
     app: springboot-app
+  type: LoadBalancer
   ports:
     - protocol: TCP
       port: 80
       targetPort: 8080
-      nodePort: 32001
-  type: NodePort
+
