--- a/k8s/petclinic.yml
+++ b/k8s/petclinic.yml
@@ -30,7 +30,7 @@ spec:
     spec:
       containers:
         - name: workload
-          image: tejas1205/petclinic:replaceImageTag
+          image: tejas1205/petclinic:2
           env:
             - name: SPRING_PROFILES_ACTIVE
               value: postgres
