--- a/k8s/petclinic.yml
+++ b/k8s/petclinic.yml
@@ -7,7 +7,7 @@ spec:
   type: NodePort
   ports:
     - port: 8080
-      targetPort: 8090
+      targetPort: 8080
   selector:
     app: petclinic
 
@@ -30,7 +30,7 @@ spec:
     spec:
       containers:
         - name: workload
-          image: tejas1205/petclinic:12
+          image: tejas1205/petclinic:replaceImageTag
           env:
             - name: SPRING_PROFILES_ACTIVE
               value: postgres
@@ -43,7 +43,7 @@ spec:
                 }
           ports:
             - name: http
-              containerPort: 8090
+              containerPort: 8080
           livenessProbe:
             httpGet:
               path: /livez
