--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,6 +15,7 @@ spring.messages.basename=messages/messages
 
 # Actuator
 management.endpoints.web.exposure.include=*
+management.metrics.enable.all=false
 
 # Logging
 logging.level.org.springframework=INFO
